--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,12 +1,12 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/VolunteerInfo?useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://tempdb.cfqzk8njtnik.ap-northeast-2.rds.amazonaws.com:3306/VolunteerInfo?useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: hello
+    password: bnmm7411
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: none
     show-sql: true
     properties:
       hibernate:
