API 생성 (조건에 맞게 필터링 / 검색도 가능)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
+server:
+  address: 0.0.0.0
+  port: 8080
